add dark mode , animations , copy to clipboard

--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 body {
-    background-color: aliceblue;
+    background-color: rgb(237, 247, 255);
 }
